// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should render breadcrumb with aria-label 1`] = `
<DocumentFragment>
  <nav
    aria-label="custom label"
    class="pf-v6-c-breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-:r2:"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    />
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should render breadcrumb with children 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-:r3:"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    >
      <li
        class="pf-v6-c-breadcrumb__item"
      >
        <a
          class="pf-v6-c-breadcrumb__link"
          href="#"
        >
          Item 1
        </a>
      </li>
       
      <li
        class="pf-v6-c-breadcrumb__item"
      >
        <span
          class="pf-v6-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
            />
          </svg>
        </span>
        <a
          class="pf-v6-c-breadcrumb__link"
          href="#"
        >
          Item 1
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should render breadcrumb with className 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb className"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-:r1:"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    />
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should render default breadcrumb 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-:r0:"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    />
  </nav>
</DocumentFragment>
`;
